--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,7 +19,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>National English Carnival</title>
+    <title>English Language Carnival</title>
   </head>
   <body>
     <noscript>
